<resources>
    <!--activity_choose_role-->
    <string name="app_name" translatable="false">SmartAlert</string>
    <string name="choose_your_role">Choose your role</string>
    <string name="i_am">I am...</string>
    <string name="a_user">A user</string>
    <string name="an_employee">An employee</string>
    <!--activity_create_account-->
    <string name="welcome_to_smartalert">Welcome to SmartAlert</string>
    <string name="create_account_for_free">Create account for free</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="passwordhint">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_passwordhint">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="succ_creat_acc">Succesfully created account</string>
    <string name="email_invalid">Email is invalid</string>
    <string name="password_invalid">Password length is invalid</string>
    <string name="password_not_match">Passwords not matched</string>
    <string name="Emailused">The email address is already in use by another account</string>
    <!--activity_login-->
    <string name="email_verify">Email not verified, Please verify your email.</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="Account_doesnt_exist">Account doesn\'t exist</string>
    <!--activity_notify-->
    <string name="select_an_option">Select an option:</string>
    <string name="location">Location:</string>
    <string name="timestamp">Timestamp:</string>
    <string name="upload_a_photo">Upload a photo:</string>
    <string name="comments">Comments:</string>
    <string name="submit">Submit</string>
    <!--activity_user_main-->
    <string name="notify_about_an_event">Νotify about an event</string>
    <!--activity_notify-->
    <string name="Couldnt_track_location">Couldn\'t track your location</string>
    <string name="Couldnt_get_timestamp">Couldn\'t get timestamp</string>
    <string name="Please_add_some_comments">Please add some comments</string>
    <string name="Incident_sent_successfully">Incident sent successfully</string>
    <string name="statistics">Statistics</string>
    <string name="logout">Logout</string>
    <string name="Turnon_location_message">Please activate the location</string>
    <string name="StatisticEarthquake">Earthquake: 0</string>
    <string name="StatisticFlood">Flood: 0</string>
    <string name="StatisticFire">Fire: 0</string>
    <string name="StatisticHurricane">Hurricane: 0</string>
    <string name="StatisticTsunami">Tsunami: 0</string>
    <string name="StatisticTerrorist_Attack">Terrorist Attack: 0</string>
    <string name="StatisticChemical_Spills">Chemical Spills: 0</string>
    <string name="StatisticOther">Other: 0</string>
    <string name="StatisticTotal_Incidents">Total Incidents: 0</string>
    <string name="StatisticGo_Back">GO BACK</string>
    <string name="StatisticsActEarthquake">"Earthquake: "</string>
    <string name="StatisticsActFlood">Flood:</string>
    <string name="StatisticsActFire">"Fire: "</string>
    <string name="StatisticsActHurricane">"Hurricane: "</string>
    <string name="StatisticsActTsunami">"Tsunami: "</string>
    <string name="StatisticsActTerrorist_Attack">"Terrorist Attack: "</string>
    <string name="StatisticsActChemical_Spills">"Chemical Spills: "</string>
    <string name="StatisticsActOther">"Other: "</string>
    <string name="StatisticsActTotal_Incidents">"Total Incidents: "</string>
    <string name="TitleEmergency">EMERGENCY</string>
    <string name="Activityemergency_emerg">Emergency:</string>
    <string name="message">Message</string>
    <string name="decline">DECLINE</string>
    <string name="incident_declined">Incidents declined!</string>


    <!--dropdown options-->
    <string-array name="dropdown_options">
        <item>Earthquake</item>
        <item>Flood</item>
        <item>Fire</item>
        <item>Hurricane</item>
        <item>Tsunami</item>
        <item>Terrorist Attack</item>
        <item>Chemical Spills</item>
        <item>Other</item>
    </string-array>
</resources>